--- a/DSAA/dsaa.tex
+++ b/DSAA/dsaa.tex
@@ -70,7 +70,7 @@ The remainder of the paper is organized as follows: in the next section (Section
 
 Recently,  the class of stochastic mixed membership models have been successfully used for link prediction and structure discovery in social networks.  In \cite{AMMSB}, the authors  propose an adaptation of mixed-membership stochastic block model (MMSB), called a-MMSB where "a" stands for assortative, and they used it for discovering overlapping communities in large size networks having millions of nodes since a-MMSB  scales well using stochastic variational inference. They constrained the weight matrix to have weights in the diagonal and a fixed small value elsewhere. A non parametric dynamic version of MMSB model has also been introduced to  handle temporal networks \cite{fan2015dynamic}. The latent feature model (LFM) has also been extended in several way, to handle non-negative weights in \cite{IMRM} and with a more subtle latent feature structure in \cite{ILAM}. Nevertheless, the characterization of these models with regards to the properties of the networks remains to be explored \cite{jacobs2014unified}. ~\\
 
-In this article, we focus on two properties:  \textit{homophily} and \textit{preferential attachment} \cite{Newman2010, Barabasi2003}. The interest of these properties has been widely emphasized in previous works notably for modeling and generating networks reflecting properties of real networks, as in the Barab\`asi-Albert model \cite{albert2002statistical} or Buckley and Osthus model \cite{Buckley2001} that integrate a preferential attachment mechanism, in the Multiplicative Attribute Graph (MAG) model \cite{Kim2012} that considers node affinities, or in the Dancer model that takes into consideration both properties \cite{Largeron2017}. However, these models do not belong to the family of Bayesian models considered in the present study. Homophily and preferential attachment have also  been exploited for improving the results obtained in classical tasks such as community detection \cite{Ciglan2013,Zhang2016} or link prediction \cite{Aiello2012,Zeng2016}. That said, few theoretical works have been done to study to what extent models comply with these properties. ~\\
+In this article, we focus on two properties:  \textit{homophily} and \textit{preferential attachment} \cite{Newman2010, Barabasi2003}. The interest of these properties has been widely emphasized in previous works notably for modeling and generating networks reflecting properties of real networks, as in the Barab\`asi-Albert model \cite{albert2002statistical} or Buckley and Osthus model \cite{Buckley2001} that integrate a preferential attachment mechanism, in the Multiplicative Attribute Graph (MAG) model \cite{Kim2012} that considers node affinities, or in the Dancer model that takes into consideration both properties \cite{Largeron2017}. Homophily and preferential attachment have also  been exploited for improving the results obtained in classical tasks such as community detection \cite{Ciglan2013,Zhang2016} or link prediction \cite{Aiello2012,Zeng2016}. That said, few theoretical works have been done to study to what extent models comply with these properties. ~\\
 
 Concerning preferential attachment, Orbanz and Roy \cite{orbanz2015bayesian} pointed out that models belonging to the family of infinitely exchangeable Bayesian graph models cannot generate sparse networks and are thus less compatible with power law degree distributions. Consequently, Lee \textit{et al.} \cite{Lee2015} proposed a random network model in order to capture the power law typical of the degree distribution in social networks. However the model remains challenging to use in practice, especially for link prediction, due to the relaxation of the exchangeability assumption.~\\
 
@@ -83,7 +83,7 @@ Following these previous studies, we study, in a theoretical way, how the non-pa
 
 Stochastic mixed membership models are generative models that rely on latent factors (also called latent \textit{classes} or \textit{features}) that represent hidden properties of the nodes of the graph $G=(V,E)$ associated to the social network (each node of the graph represents an individual in the social network); in the remainder, we denote by $N$ the number of nodes in this graph ($N=|V|$). Stochastic mixed membership models are characterized by the fact that each node can "belong" to several latent factors, which reflects the fact that each individual usually has several properties, for example can belong to several communities\footnote{As mentioned in \cite{goldenberg2010survey}, the reader should however bear in mind that the notion of latent factors is of stochastic nature and is an approximation of the notions of communities and shared properties.}. The relation between a node $i$ and the latent factors is encoded in a vector denoted $\mat{f}_{i}$, of finite dimension $K$ in standard versions of the models, and of infinite dimension in  non-parametric versions. The collection of all vectors $\mat{f}_{i}$ ($1 \le i \le N$) constitutes the factor matrix $\mat{F}$. Furthermore, a weight matrix $\mat{\Phi}$ is used to encode correlations between the latent factors.
 
-Stochastic mixed membership models differ on the way the vectors $\mat{f}_{i}$ ($1 \le i \le N$) and the matrix $\mat{\Phi}$ are generated. As mentioned before, and to be as general as possible, we consider here the non-parametric versions of the latent feature model \cite{ILFRM}, referred to as \ifm, and of the mixed-membership stochastic block model \cite{iMMSB,diMMSB}, referred to as \imb. This leads to a dynamic number of classes that allows the dimensions of the models to grow with the complexity of the data. This is done in practice by the use of non-parametric prior, respectively the Indian Buffet Process (IBP) and the Hierachical Dirichlet Process (HDP) for \ifm\ and \imb. All our results are nevertheless also valid for the finite versions of these models.~\\
+Stochastic mixed membership models differ on the way the vectors $\mat{f}_{i}$ ($1 \le i \le N$) and the matrix $\mat{\Phi}$ are generated. As mentioned before, and to be as general as possible, we consider here the non-parametric versions of the latent feature model \cite{ILFRM}, referred to as \ifm, and of the mixed-membership stochastic block model \cite{iMMSB,diMMSB}, referred to as \imb. This leads to a dynamic number of classes that allows the dimensions of the models to grow with the complexity of the data. This is done in practice by the use of non-parametric prior,  the Indian Buffet Process (IBP) for \ifm\ and the Hierachical Dirichlet Process (HDP)  for \imb. All our results are nevertheless also valid for the finite versions of these models.~\\
 
 In the latent feature model, each node is represented by a finite vector of binary features. The probability of linking two nodes is then based on a weighted similarity between their feature vectors, the weight matrix being generated according to a normal distribution. In its non-parametric version \ifm, the feature vectors are now generated according to an IBP, leading to feature vectors of infinite dimensions (even though for a finite number of nodes, only a finite number of dimensions is actually active). The following steps summarize this process:~\\
 %
@@ -126,7 +126,7 @@ where $\gem$ denotes the Stick Breaking Process distribution over the set of nat
    \end{align}
 \end{enumerate}
 %
-We have this time four real hyper-parameters, two for the hierarchical Dirichlet process ($\gamma$ and $\alpha_0$) and two for the Beta distribution underlying the weight matrix ($\lambda_0$ and $\lambda_1$). As for the previous model, in the case of undirected networks, the matrices $\mat{Y}$ and $\mat{\Phi}$ are symmetric and only their upper (or lower) diagonal parts are generated; as before again, both $\mat{F}$ and $\mat{\Phi}$ are infinite matrices. A graphical representation of this model is given in Figure~\ref{fig:mmm}(right).
+We have this time four real hyper-parameters, two for the hierarchical Dirichlet process ($\gamma$ and $\alpha_0$) and two for the Beta distribution underlying the weight matrix ($\lambda_0$ and $\lambda_1$). As for the previous model, in the case of undirected networks, the matrices $\mat{Y}$ and $\mat{\Phi}$ are symmetric and only their upper (or lower) diagonal parts are generated; as before again, both $\mat{F}$ and $\mat{\Phi}$ are infinite matrices. A graphical representation of this model is given in Figure~\ref{fig:mmm}~(right).
 
 Standard Gibbs sampling and Metropolis-Hastings algorithms can be used for inference in this model. We do not detail them here and refer the interested reader to \cite{ILFRM} and \cite{IBP}.~\\
 
@@ -149,7 +149,7 @@ In the typical use of the above models for link prediction, some observations (\
 \section{Homophily: \emph{"Birds of a feather flock together"}}
 \label{sec:homophily}
 
-Homophily refers to the tendency of individuals to connect to similar others: two individuals (and thus their corresponding nodes in a social network) are more likely to be connected if they share common characteristics~\cite{mcpherson2001birds,lazarsfeld1954friendship}. The characteristics often considered are inherent to the individuals and may represent their social status, their preferences or their interest. A related notion is the one of {\it assortativity}, that is slightly more general as it applies to any network, and not just social networks, and refers to the tendency of nodes in networks to be connected to others that are similar in some way.~\\
+Homophily refers to the tendency of individuals to connect to similar others: two individuals (and thus their corresponding nodes in a social network) are more likely to be connected if they share common characteristics~\cite{mcpherson2001birds,lazarsfeld1954friendship}. The characteristics often considered are inherent to the individuals and may represent their social status, their preferences or their interests. A related notion is the one of {\it assortativity}, that is slightly more general as it applies to any network, and not just social networks, and refers to the tendency of nodes in networks to be connected to others that are similar in some way.~\\
 
 A definition of homophily has been proposed in~\cite{la2010randomization}. However, this definition, which relies on a single characteristic (like age or gender), does not allow one to assess whether latent models for link prediction capture the homophily effect or not. We thus introduce a new definition of homophily:~\\
 %
@@ -186,7 +186,7 @@ Dropping the correlation between latent factors in the natural similarity leads 
 %
 as $\hat{\phi}_{kk} = 0$. Let us now consider $\mat{\hat{f}}_i=\mat{\hat{f}}_j=(0,1,0)$ and $\mat{\hat{f}}_{i'}=(0.5,0,0.5)$ and $\mat{\hat{f}}_{j'}=(0,1,0)$. Then, $s_l(i,j)=1$ and $s_l(i',j')=0$. However, $\pr(y_{ij}=1 \mid \M_e) = 0$ whereas $\pr(y_{i'j'}=1 \mid \M_e) > 0$. \imb\ is thus not homophilic under $s_l$. The same example, replacing $\mat{\hat{f}}_{i'}=(0.5,0,0.5)$ by $\mat{\hat{f}}_{i'}=(1,0,1)$, can be used to show that \ifm\ is neither homophilic under $s_l$.~\\
 
-This shows that, for a model to be homophilic, it should be designed according to the similarity at the basis of the proximity between individuals. Both \ifm\ and \imb\ have been designed on the basis of the natural similarity $s_n$, and directly encode the fact that similar nodes, according to $s_n$, are more likely to connected.  It is furthermore possible to make these models homophilic under $s_l$ by imposing constraints on the weight matrix $\mat{\Phi}$ (and hence its estimate $\mat{\hat{\Phi}}$); for example, considering positive, diagonal matrices with equal values on the diagonal leads to homophilic models. In that case, the latent factors can be interpreted as community indicators, each community being of equal importance. This is in line with what is done in the study presented in \cite{AMMSB} to find overlapping communities through assortativity constraints in the mixed membership stochastic block model.
+This shows that, for a model to be homophilic, it should be designed according to the similarity at the basis of the proximity between individuals. Both \ifm\ and \imb\ have been designed on the basis of the natural similarity $s_n$, and directly encode the fact that similar nodes, according to $s_n$, are more likely to be connected.  It is furthermore possible to make these models homophilic under $s_l$ by imposing constraints on the weight matrix $\mat{\Phi}$ (and hence its estimate $\mat{\hat{\Phi}}$); for example, considering positive, diagonal matrices with equal values on the diagonal leads to homophilic models. In that case, the latent factors can be interpreted as community indicators, each community being of equal importance. This is in line with what is done in the study presented in \cite{AMMSB} to find overlapping communities through assortativity constraints in the mixed membership stochastic block model.
 
 \section{Preferential attachment: \emph{"The rich get richer"}}
 \label{sec:burstiness}
@@ -319,7 +319,7 @@ For each dataset, we estimate the model parameters through Markov Chain Monte Ca
 
 \subsection{Homophily}
 
-Figure \ref{fig:homo_mustach} presents boxplots describing the distributions of the natural $s_n(i,j)$ and latent $s_l(i,j)$ similarities computed respectively on linked and non-linked pairs of nodes for \imb\ (left) and \ifm\ (right). The results have been aggregated over the four datasets. They confirm that the natural similarity is  higher for pairs of nodes which are linked than for pairs of nodes which are not linked, for both models. For the latent similarity,  there is no difference between the linked and non-linked pairs, indicating that the links are not homophilic. These experimental results are in line with the theoretical results presented in Section~\ref{sec:homophily} that state that both \ifm\ and \imb\ are homophilic for  the natural similarity but are not homophilic for the latent similarity.
+Figure \ref{fig:homo_mustach} presents boxplots describing the distributions of the natural $s_n(i,j)$ and latent $s_l(i,j)$ similarities computed respectively on linked and non-linked pairs of nodes for \imb\ (top) and \ifm\ (bottom). The results have been aggregated over the four datasets. They confirm that the natural similarity is  higher for pairs of nodes which are linked than for pairs of nodes which are not linked, for both models. For the latent similarity,  there is no difference between the linked and non-linked pairs, indicating that the links are not homophilic. These experimental results are in line with the theoretical results presented in Section~\ref{sec:homophily} that state that both \ifm\ and \imb\ are homophilic for  the natural similarity but are not homophilic for the latent similarity.
 
 \begin{figure}[ht]
 \centering
@@ -331,7 +331,7 @@ Figure \ref{fig:homo_mustach} presents boxplots describing the distributions of 
         	 \centering
           \includegraphics[width=0.38\textwidth]{img/corpus/homo_mustach_ilfm}
     \end{subfigure}
-    \caption{Natural and latent similarities aggregated over all datasets and computed on linked and non-linked pairs of nodes for \imb\ (left) and \ifm\ (right).}
+    \caption{Natural and latent similarities aggregated over all datasets and computed on linked and non-linked pairs of nodes for \imb\ (top) and \ifm\ (bottom).}
     \label{fig:homo_mustach}
 \end{figure}
 
@@ -389,9 +389,10 @@ We have studied whether stochastic mixed membership models, such as \ifm\ and \i
 
 These findings have been validated experimentally on two real and two artificial networks that have different degrees of global and local preferential attachment. An important, practical finding of our study is that \imb, usually considered of lesser "quality" than \ifm, can indeed yield better results on bursty networks (\textit{i.e.} networks with preferential attachment) when the number of training data is limited.~\\
 
-There are many directions to extend this work with the motivation to improve our theoretical understanding of graphical models for link prediction in complex networks. A straightforward extension is to examine the relation between the local preferential attachment and the dynamics of the latent classes. For example, some singular value of the hyperperameters, of the non-parametric priors, could lead to a very large number of classes or, at the opposite, just one class. In the latter case, the situation will be paradoxical between our results for the local preferential attachment and the global preferential attachment, which remain an open question. Furthermore, a fundamental results is the Aldous-Hoover theorem, which imply that exchangeable random graph cannot be sparse \cite{orbanz2015bayesian}. It seems intuitive that the sparsity is related in some way to how much the preferential attachment is strong in a network. Thus, The following question arise : Would it be realistic to assumes the exchangeability assumption for the local case but not in the global case, and how this fact would impact the burstiness of the global degree distribution and further the sparsity of the random graph.
+There are many directions to extend this work with the motivation of improving our theoretical understanding of graphical models for link prediction in complex networks. A straightforward extension is to examine the relation between the local preferential attachment and the dynamic of the latent classes. For example, some singular value of the hyperparameters, of the non-parametric priors, could lead to a very large number of classes or, at the opposite, just one class. In the latter case, the situation will be paradoxical between our results for the local preferential attachment and the global preferential attachment, which remain an open question. Furthermore, a fundamental results is the Aldous-Hoover theorem, which implies that exchangeable random graphs cannot be sparse \cite{orbanz2015bayesian}. It seems that the sparsity is related in some way to  the preferential attachment in a network. Thus, the following question arises: would it be realistic to assume the exchangeability hypothesis for the local case but not for the global case, and how this fact  impacts the burstiness of the global degree distribution and the sparsity of the graph.
 
-We believe that those questions open a way to help us developing and designing Bayesian models in order to better capture the fundamental phenomena in real social networks.
+We believe that answering to those questions open a way to  developing and designing Bayesian models able to better capture the fundamental properties of  real social networks.
+
 
 
 \bibliographystyle{unsrt}
