--- a/DSAA/a.bib
+++ b/DSAA/a.bib
@@ -23,6 +23,14 @@
     booktitle = {Proceedings of the 29th International Conference on Machine Learning, {ICML} 2012, Edinburgh, Scotland, UK, June 26 - July 1, 2012},
     year      = {2012},
 }
+@inproceedings{ICML2012Palla_785,
+    Publisher = {ACM},
+    Title = {An Infinite Latent Attribute Model for Network Data},
+    Booktitle = {Proceedings of the 29th International Conference on Machine Learning},
+    Author = {Konstantina Palla and Zoubin Ghahramani and David A. Knowles},
+    Year = {2012},
+    Pages = {1607--1614}
+} 
 
 @inproceedings{ILFRM, crossref = {miller2009nonparametric} }
 @inproceedings{miller2009nonparametric,
@@ -143,15 +151,12 @@
   pages={48--53},
   year={2008}
 }
-@article{diMMSB, crossref = {fan2015dynamic} }
 @article{fan2015dynamic,
-  title={Dynamic Infinite Mixed-Membership Stochastic Blockmodel},
-  author={Fan, Xuhui and Cao, Longbing and Xu, Da and Yi, Richard},
-  journal={Neural Networks and Learning Systems, IEEE Transactions on},
-  volume={26},
-  pages={2072--2085},
-  year={2015},
-  publisher={IEEE}
+    author    = {Xuhui Fan and Longbing Cao and Richard Yi Da Xu},
+    title     = {Dynamic Infinite Mixed-Membership Stochastic Blockmodel},
+    journal   = {CoRR},
+    volume    = {abs/1306.2999},
+    year      = {2013},
 }
 @INPROCEEDINGS{ferguson_dp, crossref = {ferguson1973bayesian} }
 @article{ferguson1973bayesian,
@@ -197,18 +202,13 @@ publisher={JSTOR}
 
 %%% From Christine pp.
 @inproceedings{LeskovecBKT08,
-  author    = {Jure Leskovec and
-               Lars Backstrom and
-               Ravi Kumar and
-               Andrew Tomkins},
-  title     = {Microscopic evolution of social networks},
-  booktitle = {Proceedings of the 14th International Conference on
-               Knowledge Discovery and Data Mining, Las Vegas, Nevada, USA, August
-               24-27, 2008},
-  pages     = {462--470},
-  year      = {2008},
+  title={Microscopic evolution of social networks},
+  author={Leskovec, Jure and Backstrom, Lars and Kumar, Ravi and Tomkins, Andrew},
+  booktitle={Proceedings of the 14th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={462--470},
+  year={2008},
+  organization={ACM}
 }
-
 @proceedings{DBLP:conf/kdd/2008,
   editor    = {Ying Li and
                Bing Liu and
@@ -294,6 +294,9 @@ publisher={JSTOR}
   pages={18--66},
   year={1954}
 }
+
+
+
 @inproceedings{la2010randomization,
  author = {La Fond, Timothy and Neville, Jennifer},
  title = {Randomization Tests for Distinguishing Social Influence and Homophily Effects},
@@ -482,16 +485,12 @@ publisher={JSTOR}
     publisher={National Acad Sciences}
 }
 @inproceedings{Li11,
-  author    = {Wu{-}Jun Li and
-               Dit{-}Yan Yeung and
-               Zhihua Zhang},
-  title     = {Generalized Latent Factor Models for Social Network Analysis},
-  booktitle = {{IJCAI} 2011, Proceedings of the 22nd International Joint Conference
-               on Artificial Intelligence, Barcelona, Catalonia, Spain, July 16-22,
-               2011},
-  pages     = {1705--1710},
-  year      = {2011},
-} 
+  title={Generalized latent factor models for social network analysis},
+  author={Li, Wu-Jun and Yeung, Dit-Yan and Zhang, Zhihua},
+  booktitle={Proceedings of the 22nd International Joint Conference on Artificial Intelligence (IJCAI), Barcelona, Spain},
+  pages={1705},
+  year={2011}
+}
 
 @inproceedings{Lee2015,
   author    = {Jay Lee and
@@ -526,13 +525,13 @@ publisher={JSTOR}
   year      = {2016},
 } 
 @inproceedings{Ciglan2013,
- author = {Ciglan, Marek and Laclav\'{\i}k, Michal and N{\o}rv{\aa}g, Kjetil},
- title = {On Community Detection in Real-world Networks and the Importance of Degree Assortativity},
- booktitle = {Proceedings of the 19th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
- series = {KDD '13},
- year = {2013},
- pages = {1007--1015},
-} 
+  title={On community detection in real-world networks and the importance of degree assortativity},
+  author={Ciglan, Marek and Laclav{\'\i}k, Michal and N{\o}rv{\aa}g, Kjetil},
+  booktitle={Proceedings of the 19th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={1007--1015},
+  year={2013},
+  organization={ACM}
+}
 @article{Largeron2017,
   author = {C. Largeron and P. N. Mougel and O.  Benyahia and O. R. Zaïane},
   journal = {Knowl Inf Syst},
