--- a/DSAA/dsaa.tex
+++ b/DSAA/dsaa.tex
@@ -1,4 +1,4 @@
-\documentclass[journal]{IEEEtran}
+\documentclass[conference]{IEEEtran}
 
 \newcommand*{\lpath}{./}
 \usepackage{amsmath,amssymb,amsbsy,amsfonts}
@@ -44,9 +44,20 @@
 \newtheorem{corollary}{Corollary}[section]
 \newtheorem{proof}{Proof}[section]
 
-\title{A study of stochastic mixed membership models for link prediction in social networks}
+
 
 \begin{document}
+
+\title{A study of stochastic mixed membership models for link prediction in social networks}
+
+\author{\IEEEauthorblockN{Adrien Dulac\IEEEauthorrefmark{1}, Eric Gaussier\IEEEauthorrefmark{1} and Christine Largeron \IEEEauthorrefmark{2}}
+\IEEEauthorblockA{\IEEEauthorrefmark{1}
+Univ. Grenoble Alpes, CNRS, Grenoble INP, LIG - F-38000 Grenoble\\
+Email: \{adrien.dulac, eric.gaussier\}@imag.fr}
+\IEEEauthorblockA{\IEEEauthorrefmark{2}
+Universit\'e Jean Monnet, Laboratoire Hubert Curien - F-42000 Saint-Etienne\\
+Email: christine.largeron@univ-st-etienne.fr}}
+
 
 \maketitle
 
@@ -393,6 +404,7 @@ There are many directions to extend this work with the motivation of improving o
 
 We believe that answering to those questions open a way to  developing and designing Bayesian models able to better capture the fundamental properties of  real social networks.
 
+~\\
 
 \bibliographystyle{unsrt}
 \bibliography{./a}
